Design refinements; add age to authors

--- a/_data/campaign_intro.yml
+++ b/_data/campaign_intro.yml
@@ -1,3 +1,4 @@
+title: Über die Kampagne
 first_column: |
   ›Watan‹ ist das arabische, persische und türkische Wort für ›Heimat‹. Der Suffix ›-topie‹ leitet sich aus dem altgriechischen ›tópos‹ ab und bedeutet ›Ort‹. Mit der Kampagne ›#watanopie – Heimat, ein Ort der Utopie?‹ sprechen junge Berliner erstmalig von einer ›Utopie der Heimat‹ und treten ein für Dialog und gesellschaftliche Partizipation. Mit dieser Kampagne fordern wir Chancengleichheit für Jugendliche mit und ohne Flucht- und Migrationserfahrung.
 
